--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3"></script>
     <!-- JS -->
     <script  src="./main.js" defer></script>
   </head>
@@ -22,7 +23,7 @@
       <main>
         <div class="container" id="container">
           
-          <div class="slideContainer" id="slideContainer">
+          <div class="slideContainer" id="slideContainer" @mouseover="stopAutoPlay()" @mouseout="outoPlay()" >
             <img :src='images[activeImage]' alt="">
           </div>
           
